# Desktop-Task-Presence-Framework

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISH_READINESS.md  README.md  RELEASE.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: config.json  initial-release.md
.cursor/plans/: dtpf_phase_1_mvp_837c8fb4.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
apps/desktop-agent/: package.json
apps/desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-agent/src-tauri/capabilities/: default.json  sticky-windows.json
apps/desktop-agent/src-tauri/migrations/: 0001_initial.sql
apps/desktop-agent/src-tauri/src/: lib.rs  main.rs  paths.rs  secrets.rs  state.rs
apps/desktop-agent/src-tauri/src/commands/: task.rs
apps/desktop-agent/src-tauri/src/db/: mod.rs  repository.rs
apps/desktop-agent/src-tauri/src/server/: auth.rs  mod.rs  routes.rs  websocket.rs
apps/desktop-agent/src-tauri/src/startup/: mod.rs
apps/desktop-agent/src-tauri/src/sync/: mod.rs
apps/desktop-agent/src-tauri/src/tray/: mod.rs
apps/desktop-agent/src-tauri/src/window_manager/: always_on_top.rs  mod.rs
apps/docs/: docusaurus.config.js  package.json  sidebars.js
scripts/: agent-dev.mjs  agent-dev.ps1  agent-dev.sh  agent-kill.ps1  fix-windows-icons.mjs  install-deps.mjs  install-deps.ps1  install-deps.sh  remove-cursor-coauthor.txt  setup.mjs  setup.ps1  setup.sh
tests/e2e/: package.json  (+2 more)
(+89 files in other folders)
